objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the person answered the phone call.</description>
        <inlineHelpText>Indicates whether or not the person answered the phone call.</inlineHelpText>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hang_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the person hung up the phone as soon as they discovered it was a telemarketing call.</description>
        <inlineHelpText>Indicates if the person hung up the phone as soon as they discovered it was a telemarketing call.</inlineHelpText>
        <label>Hang-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the conference attendee has paid.</description>
        <inlineHelpText>Indicates that the conference attendee has paid.</inlineHelpText>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Conference</fullName>
        <active>false</active>
        <description>Use this record type for members of a conference campaign.</description>
        <label>Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>false</active>
        <description>Use this record type for members of an email campaign.</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Telemarketing</fullName>
        <active>false</active>
        <description>Use this record type for members of a telemarketing campaign.</description>
        <label>Telemarketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>false</active>
        <description>Use this record type for members of a webinar campaign.</description>
        <label>Webinar</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>